workloads/beamtime/gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: beamtime-route
  namespace: beamtime
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway-fabric
  hostnames:
    - "*"
  rules:
    - matches:
        - path:
            type: RegularExpression
            value: /beamtime(/|$)(.*)
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: beamtime-service
          port: 80
